--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,4 +47,4 @@ jobs:
         env:
           CICD_GIT_COMMIT: ${{ steps.commit.outputs.short }}
         run: |
-          kubectl apply -f .
+          kubectl apply -f ./k8s
