--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,5 +47,4 @@ jobs:
         env:
           CICD_GIT_COMMIT: ${{ env.CICD_GIT_COMMIT }}
         run: |
-          cd ./k8s
-          envsubst < <(cat *.yaml) | kubectl apply -f -
+          for f in ./k8s/*.yaml; do envsubst < $f | kubectl apply -f -; done
