--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
+      - name: Notify start of deployment via Telegram
+        env:
+          TELEGRAM_BOT_ID_DEV: ${{ secrets.TELEGRAM_BOT_ID_DEV }}
+          TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        run: |
+          START_MESSAGE="🚀 Deployment process started for commit ID: ${{ steps.commit.outputs.short }} on branch: main."
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_BOT_ID_DEV}/sendMessage -d chat_id=${TELEGRAM_CHAT_ID} -d text="$START_MESSAGE"
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -51,10 +59,10 @@ jobs:
             sed "s|\$CICD_GIT_COMMIT|${CICD_GIT_COMMIT}|g" "$f" | kubectl apply -f -
           done
 
-      - name: Notify via Telegram
+      - name: Notify completion of deployment via Telegram
         env:
           TELEGRAM_BOT_ID_DEV: ${{ secrets.TELEGRAM_BOT_ID_DEV }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          MESSAGE="Deployment to EKS completed successfully with commit ID: ${{ steps.commit.outputs.short }}"
-          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_BOT_ID_DEV}/sendMessage -d chat_id=${TELEGRAM_CHAT_ID} -d text="$MESSAGE"
+          END_MESSAGE="☑️ Deployment to EKS completed successfully! 🚢\n\nCommit ID: ${{ steps.commit.outputs.short }}\nBranch: main\nEnvironment: dev-aws"
+          curl -s -X POST https://api.telegram.org/bot${TELEGRAM_BOT_ID_DEV}/sendMessage -d chat_id=${TELEGRAM_CHAT_ID} -d text="$END_MESSAGE"
