--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
           TELEGRAM_BOT_ID_DEV: ${{ secrets.TELEGRAM_BOT_ID_DEV }}
           TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
         run: |
-          START_MESSAGE="🚀 *Deployment process started* for commit ID: `${{ steps.commit.outputs.short }}` on branch: `main`."
+          START_MESSAGE='🚀 *Deployment process started* for commit ID: `7df3441` on branch: `main`.'
           curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_ID_DEV}/sendMessage" -d chat_id=${TELEGRAM_CHAT_ID} -d text="$START_MESSAGE" -d parse_mode=MarkdownV2
 
       - name: Set up Docker Buildx
@@ -70,5 +70,5 @@ jobs:
         run: |
           END_TIME=$(date +%s)
           ELAPSED_TIME=$(($END_TIME - $start_time))
-          END_MESSAGE="☑️ *Deployment to EKS completed successfully!* 🚢\n\n*Commit ID:* `${{ steps.commit.outputs.short }}`\n*Branch:* `main`\n*Environment:* `dev-aws`\n*Duration:* `${ELAPSED_TIME}` seconds"
+          END_MESSAGE="☑️ *Deployment to EKS completed successfully!* 🚢\n\n*Commit ID:* \`${{ steps.commit.outputs.short }}\`\n*Branch:* \`main\`\n*Environment:* \`dev-aws\`\n*Duration:* \`${ELAPSED_TIME}\` seconds"
           curl -s -X POST "https://api.telegram.org/bot${TELEGRAM_BOT_ID_DEV}/sendMessage" -d chat_id=${TELEGRAM_CHAT_ID} -d text="$END_MESSAGE" -d parse_mode=MarkdownV2
