--- a/k8s/expenses-app.yaml
+++ b/k8s/expenses-app.yaml
@@ -27,33 +27,20 @@ metadata:
   name: expenses-repo-service
   labels:
     app: expenses-repo
+  annotations:
+    service.beta.kubernetes.io/aws-load-balancer-type: external
+    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
+    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
+    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:eu-north-1:014498641718:certificate/6fd60488-0783-47b9-ba6f-a7d52db0f942" # Your certificate ARN
+    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
 spec:
   type: LoadBalancer
   ports:
-    - port: 80 # External port
+    - port: 80 # External port for HTTP
       targetPort: 8000 # Port exposed by the container
+      protocol: TCP
+    - port: 443 # External port for HTTPS
+      targetPort: 8000 # Port exposed by the container
+      protocol: TCP
   selector:
     app: expenses-repo
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: expenses-repo-ingress
-  annotations:
-    cert-manager.io/cluster-issuer: "letsencrypt-prod" # Use the appropriate issuer
-spec:
-  tls:
-    - hosts:
-        - a13ea8f41ea70437593bd0c7b5bd767f-100097524.eu-north-1.elb.amazonaws.com
-      secretName: expenses-repo-tls # Name of the secret to store SSL certs
-  rules:
-    - host: a13ea8f41ea70437593bd0c7b5bd767f-100097524.eu-north-1.elb.amazonaws.com
-      http:
-        paths:
-          - path: /
-            pathType: Prefix
-            backend:
-              service:
-                name: expenses-repo-service
-                port:
-                  number: 80
