--- a/k8s/expenses-app.yaml
+++ b/k8s/expenses-app.yaml
@@ -31,15 +31,17 @@ metadata:
     service.beta.kubernetes.io/aws-load-balancer-type: external
     service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
     service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
-    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:eu-north-1:014498641718:certificate/6fd60488-0783-47b9-ba6f-a7d52db0f942" # Your certificate ARN
+    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:eu-north-1:014498641718:certificate/6fd60488-0783-47b9-ba6f-a7d52db0f942"
     service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
 spec:
   type: LoadBalancer
   ports:
-    - port: 80 # External port for HTTP
+    - name: http
+      port: 80 # External port for HTTP
       targetPort: 8000 # Port exposed by the container
       protocol: TCP
-    - port: 443 # External port for HTTPS
+    - name: https
+      port: 443 # External port for HTTPS
       targetPort: 8000 # Port exposed by the container
       protocol: TCP
   selector:
