--- a/k8s/expenses-app.yaml
+++ b/k8s/expenses-app.yaml
@@ -27,12 +27,12 @@ metadata:
   name: expenses-repo-service
   labels:
     app: expenses-repo
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-type: external
-    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
-    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
-    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:eu-north-1:014498641718:certificate/6fd60488-0783-47b9-ba6f-a7d52db0f942"
-    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
+  # annotations:
+  #   service.beta.kubernetes.io/aws-load-balancer-type: external
+  #   service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
+  #   service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
+  #   service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "arn:aws:acm:eu-north-1:014498641718:certificate/6fd60488-0783-47b9-ba6f-a7d52db0f942"
+  #   service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
 spec:
   type: LoadBalancer
   ports:
