--- a/k8s/expenses-app.yaml
+++ b/k8s/expenses-app.yaml
@@ -27,53 +27,15 @@ metadata:
   name: expenses-repo-service
   labels:
     app: expenses-repo
-  annotations:
-    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-north-1:014498641718:certificate/6fd60488-0783-47b9-ba6f-a7d52db0f942
-    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
-    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
+  # annotations:
+  #   service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-north-1:014498641718:certificate/6fd60488-0783-47b9-ba6f-a7d52db0f942
+  #   service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
+  #   service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
 spec:
   type: LoadBalancer
   ports:
-    - port: 443 # External port
+    - port: 80 # External port
       targetPort: 8000 # Port exposed by the container
 
   selector:
     app: expenses-repo
-# //////
-
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: expenses-repo-deployment
-#   labels:
-#     app: expenses-repo
-# spec:
-#   replicas: 1
-#   selector:
-#     matchLabels:
-#       app: expenses-repo
-#   template:
-#     metadata:
-#       labels:
-#         app: expenses-repo
-#     spec:
-#       containers:
-#         - name: expenses-repo-container
-#           image: 014498641718.dkr.ecr.eu-north-1.amazonaws.com/expenses-repo:$CICD_GIT_COMMIT
-#           ports:
-#             - containerPort: 8000 # Define the port your app is listening on
-
-# ---
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   name: expenses-repo-service
-#   labels:
-#     app: expenses-repo
-# spec:
-#   type: LoadBalancer
-#   ports:
-#     - port: 80 # External port
-#       targetPort: 8000 # Port exposed by the container
-#   selector:
-#     app: expenses-repo
