--- a/k8s/expenses-app.yaml
+++ b/k8s/expenses-app.yaml
@@ -34,8 +34,12 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-    - port: 443 # External port
-      targetPort: 8000 # Port exposed by the container
+    - name: http
+      port: 80
+      targetPort: 8000
+    - name: https
+      port: 443
+      targetPort: 8000
 
   selector:
     app: expenses-repo
