--- a/k8s/expenses-app.yaml
+++ b/k8s/expenses-app.yaml
@@ -31,9 +31,9 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-    - name: http
-      port: 80
-      targetPort: 80
+    # - name: http
+    #   port: 80
+    #   targetPort: 80
     - name: https
       port: 443
       targetPort: 443
