--- a/k8s/expenses-app.yaml
+++ b/k8s/expenses-app.yaml
@@ -34,9 +34,9 @@ spec:
     # - name: http
     #   port: 80
     #   targetPort: 80
-    - name: https
-      port: 443
-      targetPort: 443
+    # - name: https
+    #   port: 443
+    #   targetPort: 443
 
   selector:
     app: expenses-repo
