--- a/finances/Dockerfile
+++ b/finances/Dockerfile
@@ -12,7 +12,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 # Expose ports 80 and 443
 EXPOSE 80
-EXPOSE 443
 
 # Run the FastAPI app using uvicorn on both ports 80 and 443
-CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port 80 & uvicorn main:app --host 0.0.0.0 --port 443"]
+CMD ["sh", "-c", "uvicorn main:app --host 0.0.0.0 --port 80"]
