--- a/.github/workflows/deploy-expenses.yml
+++ b/.github/workflows/deploy-expenses.yml
@@ -58,13 +58,16 @@ jobs:
       - name: Update kube config
         run: aws eks update-kubeconfig --region eu-north-1 --name ex-eks
 
-      - name: Deploy to EKS
+      - name: Set up Helm
+        uses: azure/setup-helm@v3
+
+      - name: Deploy to EKS using Helm
         env:
           CICD_GIT_COMMIT: ${{ steps.commit.outputs.short }}
         run: |
-          for f in ./k8s/*.yaml; do
-            sed "s|\$CICD_GIT_COMMIT|${CICD_GIT_COMMIT}|g" "$f" | kubectl apply -f -
-          done
+          helm upgrade --install expenses-app ./helm-charts/expenses-app \
+            --namespace default \
+            --set image.tag=${CICD_GIT_COMMIT}
 
       - name: Notify completion of deployment via Telegram
         env:
