--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -5,6 +5,10 @@ metadata:
   name: ingress-api
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    kubernetes.io/ingress.class: "nginx"
+    alb.ingress.kubernetes.io/ssl-passthrough: "true"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
 spec:
   ingressClassName: nginx
   rules:
@@ -15,9 +19,9 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: expenses-repo-service
+                name: nginx-service-2
                 port:
-                  number: 443
+                  number: 80
     - host: finances.api-api-api.com
       http:
         paths:
@@ -28,26 +32,23 @@ spec:
                 name: expenses-repo-service
                 port:
                   number: 443
+    - host: argocd-dev.api-api-api.com
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: argocd-server
+                port:
+                  number: 80
   tls:
     - hosts:
         - api-api-api.com
         - finances.api-api-api.com
+        - argocd-dev.api-api-api.com
       secretName: cert-secret-name
----
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
-metadata:
-  name: letsencrypt-issuer
-spec:
-  acme:
-    email: catprogrammer.vlad@gmail.com
-    server: https://acme-v02.api.letsencrypt.org/directory
-    privateKeySecretRef:
-      name: letsencrypt-issuer-key
-    solvers:
-      - http01:
-          ingress:
-            class: nginx
+
 ---
 apiVersion: cert-manager.io/v1
 kind: Certificate
@@ -61,6 +62,7 @@ spec:
   dnsNames:
     - api-api-api.com
     - finances.api-api-api.com
+    - argocd-dev.api-api-api.com
   issuerRef:
     name: letsencrypt-issuer
     kind: ClusterIssuer
